@@ -2,7 +2,14 @@ Changes and Bugs fixed during the different Releases
 ====================================================
 
 Release 3.0 (not scheduled yet)
-=================================
+===============================
+* Some modifications of the pivot model were done.
+  - MultiplicityElements are now removed. Multiple elements are now adapted to 
+    CollectionTypes.
+
+* Some bugs in the Java meta-model were fixed.
+  - Types built of nested collections or arrays are now adapted correctly.
+
 * Some bugs in the UML2 meta-model were fixed.
   - Loading UML models containing references to other models should now work appropriately.
   - Reload of UML models now reloads changes of referenced external model elements as well.
